--- a/server/Pipfile
+++ b/server/Pipfile
@@ -10,7 +10,8 @@ django = "*"
 djangorestframework = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
-psycopg2-binary = "*"
+gunicorn = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.7"
