--- a/server/Pipfile
+++ b/server/Pipfile
@@ -12,6 +12,8 @@ djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
 gunicorn = "*"
 django-heroku = "*"
+dj-database-url = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
